# qr_adapter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: llama3_8b.yaml  qwen3_4b.yaml
docs/: architecture.md
examples/: 01_proxy_search.py  02_load_real_sensitivity.py
qr_adaptor/: __init__.py  __main__.py  cli.py  qradaptor.py
qr_adaptor/core/: __init__.py  config.py  importance.py  memory.py  pareto.py
qr_adaptor/evaluation/: __init__.py  proxy.py  real_task.py
qr_adaptor/experiments/: __init__.py  ablation_importance.py  eval_tasks.py
qr_adaptor/search/: __init__.py  neighbors.py  operators.py  phase2_evolution.py  phase3_bo.py
qr_adaptor/surrogate/: __init__.py  mlp.py
qr_adaptor/training/: __init__.py  data.py  lora.py  post_quant.py  quantize.py  sft.py
qr_adaptor/utils/: __init__.py  metrics.py  numeric.py
scripts/: ablation_importance.sh  run_search.sh  run_search_real_task.sh
sensitivity/: Qwen3-4B_dataset_wikitext2_n_sample_128_seqlen_2048.json
tests/: test_smoke.py
