[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qr_adaptor"
version = "1.0.0"
description = "QR-Adaptor: joint per-layer quantization and LoRA rank optimization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "QR-Adaptor Authors"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/harrysyz99/qr_adapter"
Repository = "https://github.com/harrysyz99/qr_adapter"

[project.scripts]
qr-adaptor = "qr_adaptor.cli:main"
